# april

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  constraints-dev.txt  pyproject.toml
agents/: __init__.py  base.py  registry.py  schemas.py
apps/: __init__.py
april_common/: __init__.py  audit.py  config_fingerprint.py  config_validation.py  effective_config.py  errors.py  logging.py  path_security.py  project_scope.py  report_freshness.py  settings.py  time.py  token_setup.py
configs/: agents.yaml  april.yaml  model_downloads.yaml  model_profiles.yaml  models.yaml  permissions.yaml  tools.yaml
docs/: agent-contracts.md  api.md  architecture.md  implementation-plan.md  macbookpro-acceptance.md  memory-design.md  permissions.md  run-april-verification.md  runtime-design.md  threat-model.md  voice-design.md
models/: README.md
scripts/: create_macos_app_stub.sh  download_models.sh  index_repo.sh  install_run_april.sh  run_api.sh  run_cli.sh  run_runtime.sh  setup_mac.sh  smoke_project_workflow.sh  uninstall_run_april.sh
services/: __init__.py
skills/: __init__.py  base.py  policy.py  registry.py  schemas.py
tests/: conftest.py  test_acceptance.py  test_agent_loop.py  test_agent_tool_alignment.py  test_approvals.py  test_bootstrap.py  test_brain_eval.py  test_brain_parser.py  test_brain_router.py  test_brain_routing_scenarios.py  test_clean_dev_install.py  test_cli_main.py  test_command_security.py  test_config_fingerprint.py  test_config_validation.py  test_constraints.py  test_context_manager.py  test_core_api.py  test_daily_driver.py  test_database_lifecycle.py  test_desktop.py  test_desktop_auth.py  test_desktop_dashboard.py  test_documents.py  test_fake_backend_structured.py  test_fallback_router_git.py  test_git_skill.py  test_go_live.py  test_llama_cpp_backend.py  test_local_boundaries.py  (+42 more)
(+161 files in other folders)
