[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "april-local"
version = "0.1.0"
description = "APRIL: a private local-first AI assistant for macOS"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Private" }
authors = [{ name = "APRIL" }]
dependencies = [
  "aiosqlite>=0.20.0",
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "jinja2>=3.1.0",
  "numpy>=1.26.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "pyyaml>=6.0.0",
  "rich>=13.7.0",
  "typer>=0.12.0",
  "uvicorn>=0.30.0",
]

[project.optional-dependencies]
runtime = ["llama-cpp-python>=0.2.90"]
voice = [
  "sounddevice>=0.4.7",
  "openwakeword>=0.6.0",
]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.23.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.0",
  "mypy>=1.11.0",
]

[project.scripts]
april = "apps.cli.main:app"
april-api = "services.api.server:main"
april-runtime = "services.april_runtime.server:main"
run = "apps.runner.main:app"
april-run = "apps.runner.main:app"

[tool.hatch.build.targets.wheel]
packages = ["april_common", "apps", "services", "agents", "skills"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "C4", "PT", "RUF"]
ignore = ["B008"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy"]
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
no_implicit_optional = true
ignore_missing_imports = true
exclude = ["tests"]

[[tool.mypy.overrides]]
module = ["apps.cli.main", "apps.runner.main"]
disallow_untyped_decorators = false
